<resources>
    <string name="app_name">Random Buzz</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="start_timer">Start Timer</string>
    <string name="plus_minus_random_amount">+/- Random Amount</string>
    <string name="_00_00">00:00</string>
    <string name="repeat">Repeat</string>
    <string name="cancel">Cancel</string>
</resources>
