<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/_00_00"
            android:textAlignment="center"
            android:textSize="36sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_minutes"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/minutes"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/text_seconds"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/seconds"
                android:inputType="number"
                android:textAlignment="center"
                android:importantForAutofill="no" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24dp"
            tools:text="@string/plus_minus_random_amount" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_minutes_random"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/minutes"
                android:inputType="number"
                android:textAlignment="center"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/text_seconds_random"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/seconds"
                android:inputType="number"
                android:textAlignment="center"
                android:importantForAutofill="no" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/check_loop_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat" />

        <Button
            android:id="@+id/btn_start_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/start_timer" />

        <Button
            android:id="@+id/btn_cancel_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/cancel" />


    </LinearLayout>
</ScrollView>